<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title">Title</string>
    <string name="description">Overview</string>
    <string name="synopsis">Synopsis</string>
    <string name="short_description">Short Description</string>
    <string name="duration">Duration</string>
    <string name="release_date">Release Date</string>
    <string name="genre">Genre</string>
    <string name="rating">Rating</string>
    <string name="cast_list">Cast List</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="episode">Episode</string>
    <string name="season">Season</string>
    <string name="companies">Production Companies</string>
    <string name="popularity">Popularity</string>
    <string name="name">Name</string>
    <string name="origin">Origin Country</string>
    <string name="share">Share</string>
    <string name="share_title">Share :</string>
    <string name="Revenue">Revenue</string>
    <string name="language">Language</string>
    <string name="separate"> | </string>
    <string name="revenue_usd">$</string>
    <string name="image_content">Image</string>
    <string name="on_failure">Fail!</string>
    <string name="movieDb_static_image">https://image.tmdb.org/t/p/original/</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="added_to_favorite">Added to favorite!</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="removed_from_favorite">Remove from favorite!</string>
    <string name="list_favorite">Favorite List</string>
    <string name="error">Whoops Error!</string>
    <string name="removed">Removed</string>
    <string name="undo">Undo</string>
    <string name="sort_asc">Sort by Name (A -> Z)</string>
    <string name="sort_desc">Sort by Name (Z -> A)</string>
</resources>