<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include
            android:id="@+id/detail_content"
            layout="@layout/content_detail_show" />

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/menu_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/app_name"
        app:backgroundTint="@color/dark_red"
        app:fabSize="normal"
        app:icon="@drawable/ic_baseline_menu_24"
        app:iconGravity="start"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/sus_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/add_to_favorite"
        android:text="@string/add_to_favorite"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/dark_red"
        app:fabSize="normal"
        app:icon="@drawable/ic_baseline_favorite_fill"
        app:iconGravity="start"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/menu_fab"
        app:layout_constraintEnd_toEndOf="@id/menu_fab" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/share_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/share_title"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/dark_red"
        app:fabSize="normal"
        app:icon="@drawable/ic_share_blue"
        app:iconGravity="start"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/sus_fab"
        app:layout_constraintEnd_toEndOf="@id/menu_fab" />

</androidx.constraintlayout.widget.ConstraintLayout>