<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:padding="8dp">

    <ImageView
        android:id="@+id/image_poster"
        android:layout_width="170dp"
        android:layout_height="270dp"
        android:src="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/movie_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="4"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title" />

    <ImageView
        android:id="@+id/calendar_img"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/rating"
        android:src="@drawable/ic_baseline_calendar_month_24"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintStart_toEndOf="@id/image_poster"
        app:layout_constraintTop_toBottomOf="@+id/movie_title_text" />

    <TextView
        android:id="@+id/movie_release_date"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:gravity="start"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintStart_toEndOf="@id/calendar_img"
        app:layout_constraintTop_toBottomOf="@+id/movie_title_text"
        tools:text="@string/release_date" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/dark_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_poster"
        app:layout_constraintTop_toBottomOf="@id/movie_release_date" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_genre_1"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/design_default_color_primary"
        app:layout_constraintStart_toStartOf="@id/calendar_img"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <TextView
            android:id="@+id/movie_genre_1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/genre"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_genre_2"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/design_default_color_primary"
        app:layout_constraintStart_toEndOf="@id/cv_genre_1"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <TextView
            android:id="@+id/movie_genre_2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/genre"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/movie_rating"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/rating"
        android:gravity="start"
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintBottom_toTopOf="@id/movie_duration_img"
        app:layout_constraintEnd_toStartOf="@id/movie_rating_text"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toBottomOf="@+id/cv_genre_1" />

    <TextView
        android:id="@+id/movie_rating_text"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:gravity="start"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/movie_rating"
        app:layout_constraintTop_toTopOf="@id/movie_rating"
        tools:text="@string/rating" />

    <ImageView
        android:id="@+id/movie_duration_img"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/duration"
        android:gravity="start"
        android:src="@drawable/ic_baseline_access_time_24"
        app:layout_constraintBottom_toTopOf="@id/movie_episode_img"
        app:layout_constraintEnd_toStartOf="@id/movie_duration_text"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toBottomOf="@+id/movie_rating" />

    <TextView
        android:id="@+id/movie_duration_text"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:gravity="start"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/movie_duration_img"
        app:layout_constraintTop_toTopOf="@id/movie_duration_img"
        tools:text="@string/duration" />

    <ImageButton
        android:id="@+id/img_share"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/movie_release_date"
        app:srcCompat="@drawable/ic_share_blue"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/movie_episode_img"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/episode"
        android:gravity="start"
        android:src="@drawable/ic_baseline_local_movies_24"
        app:layout_constraintEnd_toStartOf="@id/movie_episode_text"
        app:layout_constraintStart_toEndOf="@+id/image_poster"
        app:layout_constraintTop_toBottomOf="@+id/movie_duration_img" />

    <TextView
        android:id="@+id/movie_episode_text"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:gravity="start"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/movie_episode_img"
        app:layout_constraintTop_toTopOf="@id/movie_episode_img"
        tools:text="@string/episode" />

    <TextView
        android:id="@+id/desc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/synopsis"
        android:textColor="@color/dark_red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/desc_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_poster" />

    <TextView
        android:id="@+id/desc_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/cast_list_module"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_title"
        tools:text="@string/synopsis" />

    <TextView
        android:id="@+id/cast_list_module"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/cast_list"
        android:textColor="@color/dark_red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cast_list_module"
        tools:listitem="@layout/items_cast_list" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rv_cast"
        app:layout_constraintEnd_toEndOf="@+id/rv_cast"
        app:layout_constraintStart_toStartOf="@+id/rv_cast"
        app:layout_constraintTop_toTopOf="@+id/rv_cast"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>